# 98wm

./: .gitignore  Cargo.toml
crates/wm98-compositor/: Cargo.toml
crates/wm98-compositor/src/: compositor.rs  decorations.rs  handlers.rs  input.rs  main.rs  state.rs
crates/wm98-core/: Cargo.toml
crates/wm98-core/src/: config.rs  layout.rs  lib.rs  theme.rs
crates/wm98-macos/: Cargo.toml
crates/wm98-macos/src/: decorations.rs  main.rs  window_manager.rs
