[package]
name    = "wm98-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow    = { workspace = true }
log       = { workspace = true }
serde     = { workspace = true }
thiserror = { workspace = true }
tiny-skia = { workspace = true }
toml      = { workspace = true }
